# corinthia-docformats

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  LICENSE.txt  LINK_DEPENDENCIES.txt  README.md
DocFormats/: CMakeLists.txt  DocFormats.c
DocFormats/api/: CMakeLists.txt
DocFormats/api/headers/: CMakeLists.txt  DocFormats.h  DocFormats_test.h  README.txt
DocFormats/api/headers/DocFormats/: DFError.h  DFStorage.h  DFXMLForward.h  DocFormats.h  Formats.h  Operations.h
DocFormats/api/src/: CMakeLists.txt  Formats.c  Operations.c  README.txt  wrapper.c
DocFormats/api/tests/: APITests.c  CMakeLists.txt  README.txt  test_api.c
DocFormats/core/: CMakeLists.txt
DocFormats/core/forward_decl_BAD/: DFDOM.h  DFHTML.h  DFString.h  DFXML.h
DocFormats/core/headers/: CMakeLists.txt  core_datacapsule.h  core_helper.h
DocFormats/core/src/: CMakeLists.txt
DocFormats/core/src/common/: CMakeLists.txt  DFBDT.c  DFBDT.h  DFClassNames.h  DFTable.c  DFTable.h
DocFormats/core/src/css/: CMakeLists.txt  CSS.c  CSS.h  CSSClassNames.c  CSSClassNames.h  CSSLength.c  CSSLength.h  CSSParser.c  CSSParser.h  CSSProperties.c  CSSProperties.h  CSSSelector.c  CSSSelector.h  CSSSheet.c  CSSSheet.h  CSSStyle.c  CSSStyle.h  CSSSyntax.c  CSSSyntax.h  Word.h  WordConverter.h
DocFormats/core/src/html/: CMakeLists.txt  DFHTDocument.c  DFHTDocument.h  DFHTML.c  DFHTML.h  DFHTMLNormalization.c  DFHTMLNormalization.h  DFHTMLTables.c  DFHTMLTables.h  DFTidyHelper.c  DFTidyHelper.h  DFTidyWrapper.c  DFTidyWrapper.h
DocFormats/core/src/lib/: CMakeLists.txt  DFAllocator.c  DFAllocator.h  DFArray.c  DFArray.h  DFBuffer.c  DFBuffer.h  DFCallback.c  DFCallback.h  DFCharacterSet.c  DFCharacterSet.h  DFCommon.h  DFError.c  DFError.h  DFFilesystem.c  DFFilesystem.h  DFHashTable.c  DFHashTable.h  DFStorage.c  DFString.c  DFString.h  DFZipFile.c  DFZipFile.h  TextPackage.c  TextPackage.h
DocFormats/core/src/names/: CMakeLists.txt  DFXMLNames.c  DFXMLNames.h  DFXMLNamespaces.c  DFXMLNamespaces.h
DocFormats/core/src/platform/: Apple.c  CMakeLists.txt  DFPlatform.h  Linux.c  Unix.c  Win32.c
DocFormats/core/src/xml/: CMakeLists.txt  DFChanges.c  DFChanges.h  DFDOM.c  DFDOM.h  DFMarkupCompatibility.c  DFMarkupCompatibility.h  DFNameMap.c  DFNameMap.h  DFXML.c  DFXML.h
DocFormats/core/tests/: CMakeLists.txt  test_core.c
DocFormats/core/tests/common/: BDTTests.c  BDTTests.h  CMakeLists.txt  test_core_common.c
DocFormats/core/tests/css/: CSSTests.c
DocFormats/core/tests/data/: CMakeLists.txt  test_core_data.c
DocFormats/core/tests/html/: HTMLPlain.c  HTMLPlain.h  HTMLTests.c
DocFormats/core/tests/lib/: CMakeLists.txt  LibTests.c  test_core_lib.c
DocFormats/core/tests/names/: CMakeLists.txt  test_core_names.c
DocFormats/core/tests/platform/: CMakeLists.txt  test_core_platform.c
DocFormats/core/tests/xml/: XMLTests.c
DocFormats/coverage/: CMakeLists.txt  productionCoverage.c  productionCoverage.h
DocFormats/coverage/src/: ProductionCoverage.c
DocFormats/filters/: CMakeLists.txt
DocFormats/filters/headers/: README.txt
DocFormats/filters/html/: CMakeLists.txt
DocFormats/filters/html/src/: CMakeLists.txt  DFHTDocument.c  DFHTDocument.h  DFHTML.c  DFHTMLNormalization.c  DFHTMLTables.c  DFTidyHelper.c  DFTidyHelper.h  DFTidyWrapper.c
DocFormats/filters/html/tests/: CMakeLists.txt  test_html.c
DocFormats/filters/html/tests/normalization/: formatting09.test  formatting10.test  formatting11.test  whitespace15.test  whitespace16.test  whitespace17.test  whitespace18.test
DocFormats/filters/latex/: CMakeLists.txt
DocFormats/filters/latex/src/: CMakeLists.txt  HTMLToLaTeX.c  HTMLToLaTeX.h
DocFormats/filters/latex/tests/: CMakeLists.txt  LaTeXTests.c  test_latex.c
DocFormats/filters/odf/: CMakeLists.txt
DocFormats/filters/odf/src/: CMakeLists.txt  ODF.c  ODF.h  ODFConverter.c  ODFConverter.h  ODFManifest.c  ODFManifest.h  ODFPackage.c  ODFPackage.h  ODFSheet.c  ODFSheet.h
DocFormats/filters/odf/src/common/: CMakeLists.txt  ODF.c  ODFManifest.c  ODFManifest.h  ODFPackage.c  ODFPackage.h  ODFSheet.c  ODFSheet.h
DocFormats/filters/odf/src/drawing/: CMakeLists.txt  ODFDrawing.c  README.txt
DocFormats/filters/odf/src/formatting/: ODFStyles.c  ODFStyles.h
DocFormats/filters/odf/src/lenses/: ODFBody.c  ODFDocument.c  ODFHeader.c  ODFLenses.c  ODFLenses.h  ODFParagraph.c  ODFParagraphContent.c  ODFPresentationLens.c  ODFSpreadsheetLens.c  ODFTextLens.c  ODFTextLevelLens.c
DocFormats/filters/odf/src/presentation/: CMakeLists.txt  ODFPresentation.c  README.txt
DocFormats/filters/odf/src/spreadsheet/: CMakeLists.txt  ODFSpreadsheet.c  README.txt
DocFormats/filters/odf/src/text/: CMakeLists.txt  ODFText.c  ODFText.h  ODFTextConverter.c  ODFTextConverter.h  README.txt  color.c  color.h  gbg_test.c  gbg_test.h
DocFormats/filters/odf/tests/: CMakeLists.txt  ODFTests.c  README.txt  test_odf.c
DocFormats/filters/ooxml/: CMakeLists.txt
DocFormats/filters/ooxml/src/: CMakeLists.txt
DocFormats/filters/ooxml/src/common/: CMakeLists.txt  OOXMLTypedefs.h  OPC.c  OPC.h
DocFormats/filters/ooxml/src/drawing/: CMakeLists.txt  OOXMLDrawing.c  README.txt
DocFormats/filters/ooxml/src/odf/: ODFConverter.c  ODFConverter.h
DocFormats/filters/ooxml/src/presentation/: CMakeLists.txt  (+2 more)
DocFormats/filters/ooxml/tests/: CMakeLists.txt  test_ooxml.c
DocFormats/headers/: DFCommon.h  DFCore.h  DFPlatform.h  DFTypes.h
DocFormats/platform/: CMakeLists.txt
DocFormats/platform/headers/: CMakeLists.txt  platform.h
DocFormats/platform/src/: Apple.c  CMakeLists.txt  Linux.c  Unix.c  Win32.c  Wrapper.c  Wrapper_zip.c  missingOS.c
DocFormats/platform/tests/: CMakeLists.txt  OStests.c  WrapperTests.c  test_platform.c
DocFormats/unittest/: DFUnitTest.c  DFUnitTest.h
consumers/dfutil/src/: BDTTest.c  BDTTest.h  CMakeLists.txt  Commands.c  Commands.h  DFChanges.c  DFChanges.h  FunctionTests.h  FunctionTests.m  Plain.c  Plain.h  StringTests.h  StringTests.m  Test.c  Test.h  TestCase.c  TestCase.h  TestFunctions.c  TextPackage.c  TextPackage.h  main.c
dfutil/: BDTTest.c  CMakeLists.txt  TestFunctions.c
(+562 files in other folders)
